1. Ability to perform encodes targeting certain file size(s) 2. Always store ADM2 metric value from now on 3. Refactor to reduce some code duplication 4. Add "444u" subsampling implementation for all codecs

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,9 @@ parallel_*txt
 *_ssim_*_420
 *_ssim_*_444
 *_ssim_*_444u
+*_file_size_bytes_*_420
+*_file_size_bytes_*_444
+*_file_size_bytes_*_444u
 4*.png
 __pycache__/
 stats.json
